--- a/ESR-Technical-Documentation/HabitatCompressionIndex.qmd
+++ b/ESR-Technical-Documentation/HabitatCompressionIndex.qmd
@@ -4,4 +4,4 @@ Spatial variability in patterns of upwelling, including the distribution of upwe
 
 HCI is derived from the CCE configuration of the Regional Ocean Modeling System (ROMS) model with data assimilation (@neveu2016historical), and is estimated in four biogeographic provinces within the CCE: 30°-35.5°N, 35.5°-40°N, 40°-43.5°N, and 43.5°-48°N. HCI is defined as the area of monthly averaged ROMS model temperatures at a depth of 2 m that fall below a temperature threshold. Each region/month has a unique temperature threshold, based on its distinct historic climatology.
 
-#could replace highlighted text with "The Habitat Compression Index (HCI) is a model-derived measure of the area of cool habitat along the coast, which is suitable for a diverse and productive portion of the CCE food web. HCI is estimated in four biogeographic provinces within the CCE: : 30°-35.5°N, 35.5°-40°N, 40°-43.5°N, and 43.5°-48°N. Methodological details are available \[here\]."
+Note: perhaps we could replace highlighted text with "The Habitat Compression Index (HCI) is a model-derived measure of the area of cool habitat along the coast, which is suitable for a diverse and productive portion of the CCE food web. HCI is estimated in four biogeographic provinces within the CCE: : 30°-35.5°N, 35.5°-40°N, 40°-43.5°N, and 43.5°-48°N. Methodological details are available \[here\]."
