--- a/ESR-Technical-Documentation/SCCForage.qmd
+++ b/ESR-Technical-Documentation/SCCForage.qmd
@@ -4,4 +4,4 @@ Abundance indicators for forage in the Southern CCE come from fish and squid lar
 
 Pelagic forage larvae data from the Southern CCE were provided by A. Thompson, NMFS/SWFSC, from spring CalCOFI surveys (https://calcofi.org/); data were not collected in 2020 due to survey cancellations associated with the COVID pandemic. Similarity analysis and cluster plot by A. Thompson, NMFS/SWFSC.
 
-#add SCC larval fish references
+Pelagic forage larvae data from the Southern CCE were provided by A. Thompson, NMFS/SWFSC, from spring CalCOFI surveys (https://calcofi.org/); data were not collected in 2020 due to survey cancellations associated with the COVID pandemic. Similarity analysis and cluster plot by A. Thompson, NMFS/SWFSC.
