--- a/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
+++ b/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
@@ -1,16 +1,14 @@
 # Chinook Salmon Ecosystem Conditions - California
 
-Background.
-Central Valley Fall Chinook salmon stoplight table: In the 2019-2020 ecosystem status report (REFERENCE), we introduced a relatively simple “stoplight” table of ecosystem indicators that were shown by Friedman et al. (2019) to be correlated with returns of naturally produced Central Valley Fall Chinook salmon. In an updated stoplight chart for adult Fall Chinook salmon returning to the Central Valley in 2024, the focal ecosystem indicators are: spawning escapement of parent generations; egg incubation temperature between October and December at Red Bluff Diversion Dam (Sacramento River); egg thiamine concentrations based on averages of samples collected from Central Valley fall run hatchery programs; median flow in the Sacramento River in the February after fry emergence; and a marine predation index based on the abundance of common murres at Southeast Farallon Island and the proportion of juvenile salmon in their diets. Reflecting discussions with the SSC-ES in September 2020, we emphasize that this stoplight chart is strictly qualitative and contextual decision-support information. Qualitative descriptors (color-coded terms like “very poor”) are based on recent time series and on expert opinion of how a given indicator relates to quantitative analysis of the relationship between the indicator and life-stage specific survival (see Figure 5 in Friedman et al. 2019). For example, in the stoplight Table flows rated "very low" (<7,000 cfs) are consistent with <25% rearing/outmigration survival rates, while the flows rated “low” (7,000 to 20,000 cfs) were consistent with 25-50% outmigrant survival (see Fig. 5 in, Friedman et al. 2019). Egg incubation temperatures in the Table were consistent with egg-to-fry survival ranging from ~50% (which we rated as “suboptimal”) to 0% at > 13 C (“very poor/cohort failure”). We continue to refine these qualitative categories for future reports so that their basis is more explicit.
+Background. Central Valley Fall Chinook salmon stoplight table: In the 2019-2020 ecosystem status report (REFERENCE), we introduced a relatively simple “stoplight” table of ecosystem indicators that were shown by Friedman et al. (2019) to be correlated with returns of naturally produced Central Valley Fall Chinook salmon. In an updated stoplight chart for adult Fall Chinook salmon returning to the Central Valley in 2024, the focal ecosystem indicators are: spawning escapement of parent generations; egg incubation temperature between October and December at Red Bluff Diversion Dam (Sacramento River); egg thiamine concentrations based on averages of samples collected from Central Valley fall run hatchery programs; median flow in the Sacramento River in the February after fry emergence; and a marine predation index based on the abundance of common murres at Southeast Farallon Island and the proportion of juvenile salmon in their diets. Reflecting discussions with the SSC-ES in September 2020, we emphasize that this stoplight chart is strictly qualitative and contextual decision-support information. Qualitative descriptors (color-coded terms like “very poor”) are based on recent time series and on expert opinion of how a given indicator relates to quantitative analysis of the relationship between the indicator and life-stage specific survival (see Figure 5 in Friedman et al. 2019). For example, in the stoplight Table flows rated "very low" (\<7,000 cfs) are consistent with \<25% rearing/outmigration survival rates, while the flows rated “low” (7,000 to 20,000 cfs) were consistent with 25-50% outmigrant survival (see Fig. 5 in, Friedman et al. 2019). Egg incubation temperatures in the Table were consistent with egg-to-fry survival ranging from \~50% (which we rated as “suboptimal”) to 0% at \> 13 C (“very poor/cohort failure”). We continue to refine these qualitative categories for future reports so that their basis is more explicit.
 
 The escapement descriptor is a qualitative evaluation of how natural-area escapement of a parent generation relates to the natural area + hatchery escapement goal of 122,000– 180,000 fish, with 122,000 spawners as the SMSY target (PFMC 2022d). Natural area escapement is relevant to the stoplight table as an indicator of total natural area egg production (e.g., Munsch et al. 2020). However, the qualification of this indicator requires future research. Obviously, using a natural+hatchery target as the qualifier for natural-only escapement is problematic. Perhaps more importantly, the SSC and STT have both recommended research and reconsideration of the Sacramento River fall Chinook SMSY objective (PFMC 2022e,f), and Satterthwaite (2022) has concluded that an escapement of 122,000 adults is insufficient to maximize natural production. We have not been able to fully address the SSC and SST comments yet.
 
 The qualitative nature of this stoplight table is in part due to the fact that some of the parameters used by Friedman et al. (2019) were estimated using information from both natural-origin and hatchery-origin fish, and while it is reasonable to assume that true parameter values would be similar, given correlations between natural and hatchery escapements, additional data specific to natural-origin fish are likely necessary in order to improve model fits, evaluate other potential covariates, and support adequate testing of model predictive skill.
 
-[include here Table J.1 which documents the habitat indicators, definitions, and key references]
+\[include here Table J.1 which documents the habitat indicators, definitions, and key references\]
 
-Methods. 
-The indicators in Table J.1 have been shown in previous studies or were proposed in rebuilding plans to be strongly related with life-stage specific Chinook salmon productivity, and these studies helped determine expected directionality of indicators with stock productivity (see below and Harvey et al. 2020 for additional justification). Four of the five broad categories of indicators in the stoplight charts align with the simpler stoplight chart for Central Valley fall Chinook salmon presented in the main body of this report (Table 3.2): Adult Spawners, Incubation conditions, Freshwater / Estuarine Residence conditions, and Marine Residence conditions (for the first year of marine residence). The fifth category of indicators, Hatchery Releases, expands the scope of these tables relative Table 3.2, which focuses only on natural-area fish. The habitat indicator charts also share qualities with the stoplight chart developed for Columbia Basin Chinook salmon and Oregon coast coho salmon (Table 3.1) by including regional and basin-scale oceanographic indicators as part of early marine residence conditions. Data on krill off northern California are also presented within the table for KRFC.
+Methods. The indicators in Table J.1 have been shown in previous studies or were proposed in rebuilding plans to be strongly related with life-stage specific Chinook salmon productivity, and these studies helped determine expected directionality of indicators with stock productivity (see below and Harvey et al. 2020 for additional justification). Four of the five broad categories of indicators in the stoplight charts align with the simpler stoplight chart for Central Valley fall Chinook salmon presented in the main body of this report (Table 3.2): Adult Spawners, Incubation conditions, Freshwater / Estuarine Residence conditions, and Marine Residence conditions (for the first year of marine residence). The fifth category of indicators, Hatchery Releases, expands the scope of these tables relative Table 3.2, which focuses only on natural-area fish. The habitat indicator charts also share qualities with the stoplight chart developed for Columbia Basin Chinook salmon and Oregon coast coho salmon (Table 3.1) by including regional and basin-scale oceanographic indicators as part of early marine residence conditions. Data on krill off northern California are also presented within the table for KRFC.
 
 The indicators in Table J.1 and in the stoplight tables above have undergone several important adjustments from previous reports:
 
@@ -20,10 +18,9 @@ Recent analysis of krill off northern California have revealed that krill length
 
 CVSC differs from SRFC not only in migration timing but also in their behavior and spatial distribution. Habitat indicators reflect these differences, by characterizing early upstream migration starting in February, holding in pools through the summer, and spawning in a small number of creeks in the late summer and fall. Adult numbers focused on spawner counts in Butte, Mill, and Deer Creeks. Butte Creek spawners migrate from the Sacramento River through Sutter Bypass to Butte Creek, and outmigrants may rear within Sutter Bypass during outmigration. Hence, flow and temperature metrics relied on gages from these systems in addition to the Sacramento mainstem, and Sutter Bypass inundation instead of Yolo Bypass. Finally, the sole hatchery for CVSC is from Feather River, so releases and timing metrics focused on data from just this hatchery.
 
-The stoplight tables are categorized from favorable to poor conditions using the same approach as described for the Northern California Current salmon indicator stoplight table (see Appendix J.1). Specifically, after indicator datasets were collected, all indicators were “directionalized” to account for their expected relationships with stock productivity (based on the “Effect” column in (Table J.1) and converted into standardized values. These values are reported in the stoplight tables above, with colors delineating statistically meaningful departures (>2 s.d.) toward poorer (warm shades) or more productive (cool shades) conditions compared to near-average years (within ±1 s.d., yellow). The main difference for the tables shown here relative to (Table 3.1) is that we have not yet determined a fixed historic reference period for the SRFC, KRFC and CVSC tables, due in part to missing data from one or more indicators in large portions of the time series.
+The stoplight tables are categorized from favorable to poor conditions using the same approach as described for the Northern California Current salmon indicator stoplight table (see Appendix J.1). Specifically, after indicator datasets were collected, all indicators were “directionalized” to account for their expected relationships with stock productivity (based on the “Effect” column in (Table J.1) and converted into standardized values. These values are reported in the stoplight tables above, with colors delineating statistically meaningful departures (\>2 s.d.) toward poorer (warm shades) or more productive (cool shades) conditions compared to near-average years (within ±1 s.d., yellow). The main difference for the tables shown here relative to (Table 3.1) is that we have not yet determined a fixed historic reference period for the SRFC, KRFC and CVSC tables, due in part to missing data from one or more indicators in large portions of the time series.
 
-Habitat Indicator Descriptions. 
-Adults returning and migrating to spawning grounds: Spawning adults set the cohort size (Friedman et al. 2019) and potential for density-dependent habitat limitations at future life stages (Munsch et al. 2020), so we incorporated estimated escapements from PFMC preseason forecasts. Adults must navigate multiple potential barriers to reach spawning grounds, including low river flows and high temperatures at the end of summer. We used flow and temperature measurements from the lower portions of the Sacramento and Klamath Rivers in September and October. In the Sacramento River, adults must also navigate the channel network of the delta, and the rebuilding plan proposed examining potential effects of the Delta Cross Channel as a migration barrier. We used the proportion of time the Cross Channel was closed in September and October as the indicator.
+Habitat Indicator Descriptions. Adults returning and migrating to spawning grounds: Spawning adults set the cohort size (Friedman et al. 2019) and potential for density-dependent habitat limitations at future life stages (Munsch et al. 2020), so we incorporated estimated escapements from PFMC preseason forecasts. Adults must navigate multiple potential barriers to reach spawning grounds, including low river flows and high temperatures at the end of summer. We used flow and temperature measurements from the lower portions of the Sacramento and Klamath Rivers in September and October. In the Sacramento River, adults must also navigate the channel network of the delta, and the rebuilding plan proposed examining potential effects of the Delta Cross Channel as a migration barrier. We used the proportion of time the Cross Channel was closed in September and October as the indicator.
 
 Indicators for adult migrations differ for CVSC due to their early migration timing (February to May), spring-summer holding in pools, and spawning in a small number of Sacramento tributaries. We restricted the enumerated spawner abundance to Deer, Mill, and Butte Creeks, for which records were consistently maintained throughout the 1983-present period of record. To fill in data gaps of spawner counts for Butte Creek (the largest spawning population) to complete the retrospective time series to the 1983 brood year, we used predictions from regressions of Butte Creek spawner counts and snorkel surveys. Flows and temperatures during holding were restricted to the river with the greatest spawner abundance (Butte Creek). In addition, CDFW conducts estimates of pre-spawn mortality which we added as an indicator due to CVSC’s exposure to warm in-river conditions.
 
