--- a/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
+++ b/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
@@ -1,6 +1,6 @@
 # Chinook Salmon Ecosystem Conditions - California
 
-**Background**. Central Valley Fall Chinook salmon stoplight table: In the 2019-2020 ecosystem status report (REFERENCE), we introduced a relatively simple “stoplight” table of ecosystem indicators that were shown by Friedman et al. (2019) to be correlated with returns of naturally produced Central Valley Fall Chinook salmon. In an updated stoplight chart for adult Fall Chinook salmon returning to the Central Valley in 2024, the focal ecosystem indicators are: spawning escapement of parent generations; egg incubation temperature between October and December at Red Bluff Diversion Dam (Sacramento River); egg thiamine concentrations based on averages of samples collected from Central Valley fall run hatchery programs; median flow in the Sacramento River in the February after fry emergence; and a marine predation index based on the abundance of common murres at Southeast Farallon Island and the proportion of juvenile salmon in their diets. Reflecting discussions with the SSC-ES in September 2020, we emphasize that this stoplight chart is strictly qualitative and contextual decision-support information. Qualitative descriptors (color-coded terms like “very poor”) are based on recent time series and on expert opinion of how a given indicator relates to quantitative analysis of the relationship between the indicator and life-stage specific survival (see Figure 5 in Friedman et al. 2019). For example, in the stoplight Table flows rated "very low" (\<7,000 cfs) are consistent with \<25% rearing/outmigration survival rates, while the flows rated “low” (7,000 to 20,000 cfs) were consistent with 25-50% outmigrant survival (see Fig. 5 in, Friedman et al. 2019). Egg incubation temperatures in the Table were consistent with egg-to-fry survival ranging from \~50% (which we rated as “suboptimal”) to 0% at \> 13 C (“very poor/cohort failure”). We continue to refine these qualitative categories for future reports so that their basis is more explicit.
+**Description**. Central Valley Fall Chinook salmon stoplight table: In the 2019-2020 ecosystem status report (REFERENCE), we introduced a relatively simple “stoplight” table of ecosystem indicators that were shown by Friedman et al. (2019) to be correlated with returns of naturally produced Central Valley Fall Chinook salmon. In an updated stoplight chart for adult Fall Chinook salmon returning to the Central Valley in 2024, the focal ecosystem indicators are: spawning escapement of parent generations; egg incubation temperature between October and December at Red Bluff Diversion Dam (Sacramento River); egg thiamine concentrations based on averages of samples collected from Central Valley fall run hatchery programs; median flow in the Sacramento River in the February after fry emergence; and a marine predation index based on the abundance of common murres at Southeast Farallon Island and the proportion of juvenile salmon in their diets. Reflecting discussions with the SSC-ES in September 2020, we emphasize that this stoplight chart is strictly qualitative and contextual decision-support information. Qualitative descriptors (color-coded terms like “very poor”) are based on recent time series and on expert opinion of how a given indicator relates to quantitative analysis of the relationship between the indicator and life-stage specific survival (see Figure 5 in Friedman et al. 2019). For example, in the stoplight Table flows rated "very low" (\<7,000 cfs) are consistent with \<25% rearing/outmigration survival rates, while the flows rated “low” (7,000 to 20,000 cfs) were consistent with 25-50% outmigrant survival (see Fig. 5 in, Friedman et al. 2019). Egg incubation temperatures in the Table were consistent with egg-to-fry survival ranging from \~50% (which we rated as “suboptimal”) to 0% at \> 13 C (“very poor/cohort failure”). We continue to refine these qualitative categories for future reports so that their basis is more explicit.
 
 The escapement descriptor is a qualitative evaluation of how natural-area escapement of a parent generation relates to the natural area + hatchery escapement goal of 122,000– 180,000 fish, with 122,000 spawners as the SMSY target (PFMC 2022d). Natural area escapement is relevant to the stoplight table as an indicator of total natural area egg production (e.g., Munsch et al. 2020). However, the qualification of this indicator requires future research. Obviously, using a natural+hatchery target as the qualifier for natural-only escapement is problematic. Perhaps more importantly, the SSC and STT have both recommended research and reconsideration of the Sacramento River fall Chinook SMSY objective (PFMC 2022e,f), and Satterthwaite (2022) has concluded that an escapement of 122,000 adults is insufficient to maximize natural production. We have not been able to fully address the SSC and SST comments yet.
 
@@ -31,3 +31,11 @@ Freshwater and estuary residence: During migration to the ocean, fall Chinook sa
 Magnitude and timing of hatchery releases: While much of the habitat indicators focus on natural-area fish, hatchery releases make up a significant contribution of each run and may also contribute to density dependence. We therefore included the annual total of hatchery releases, using data from up to four SRFC hatcheries on the Sacramento (San Joaquin hatcheries were not included), the Feather River hatchery for CVSC, and Trinity and Iron Gate hatcheries in the Klamath. While hatchery-origin juveniles are also sensitive to the conditions natural-origin juveniles face, they are generally raised until they are primed for rapid migration. Following concepts of match-mismatch theory (Cushing 1990), we compared release date with the date of peak spring flow in freshwater and the spring transition in the ocean, as Satterthwaite et al. (2014) showed that both timing of release relative to the spring transition and overall later release timing were positively correlated with survival rates. Fates of hatchery fish may be a consequence of release location (Sturrock et al. 2019), including locations external to the Sacramento River system, so we also included the proportion of releases that were seaward of Sherman Island in the lower delta.
 
 Marine residence: Marine residence of 1 to 5 years completes the life cycle for fall run Chinook salmon populations. While a broad number of marine habitat indicators have been examined (Wells et al. 2008), we focused on a limited subset of possible indicators representing initial set-up of ocean entry conditions (March-May), including sea surface temperature, the North Pacific Index, and North Pacific Gyre Oscillation. We also included an index of predation by common murres nesting at Southeast Farallon Island, which was a strong predictor in Friedman et al. (2019). Unfortunately, this indicator currently cannot be updated quantitatively. On the positive side, we have updated the krill prey indicator for Klamath River fall Chinook salmon from biomass to average length to better reflect stronger correlations with recruits per spawner. Where indicators were averaged to obtain a marine habitat conditions score, hatchery release timing relative to the spring transition was also included as a marine habitat condition.
+
+**Data sources**
+
+**Data extraction**
+
+**Data analysis**
+
+**catalog link**
