--- a/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
+++ b/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
@@ -1,6 +1,6 @@
 # Groundfish Port Availability
 
-We estimated the relative availability of groundfish biomass to individual ports following the methods described in Selden et al. (2020), with some exceptions. In brief, we used data from the Northwest Fisheries Science Center’s West Coast Groundfish Bottom Trawl Survey (Keller et al. 2017) to estimate spatial distribution of species-specific biomass (Location Biomass), and the Center of Gravity (CoG) of the Location Biomass. We then calculate the Availability Index for each port by summing the Location Biomass within a radius from that port based on the 75th quantile of the distance traveled from port to harvest of species of interest, weighted by catch, as measured from trawl logbooks. We analyzed 12 species that make up a large component of landings for vessels using bottom trawl gear along the West Coast, or that have broader management interest (e.g., shortbelly rockfish).
+**Description** We estimated the relative availability of groundfish biomass to individual ports following the methods described in Selden et al. (2020), with some exceptions. In brief, we used data from the Northwest Fisheries Science Center’s West Coast Groundfish Bottom Trawl Survey (Keller et al. 2017) to estimate spatial distribution of species-specific biomass (Location Biomass), and the Center of Gravity (CoG) of the Location Biomass. We then calculate the Availability Index for each port by summing the Location Biomass within a radius from that port based on the 75th quantile of the distance traveled from port to harvest of species of interest, weighted by catch, as measured from trawl logbooks. We analyzed 12 species that make up a large component of landings for vessels using bottom trawl gear along the West Coast, or that have broader management interest (e.g., shortbelly rockfish).
 
 The present analysis differs from Selden et al. (2020) in three ways:
 
@@ -9,3 +9,9 @@ The present analysis differs from Selden et al. (2020) in three ways:
 2- We used the Location Biomass directly instead of scaling it by spawning stock biomass from the assessment. Thus, the Availability Index is a relative biomass index and not actual available biomass. Biomass was then scaled to 0-1 for presentation by dividing by the highest value in any year.
 
 3- We used only the WCGBTS, and did not combine the Triennial survey (1980-2004) with the WCGBTS. This approach shortens the analysis period but allows us to expand the depth range to 55-1250 m.
+
+**Data sources**
+
+**Data extraction**
+
+**Data analysis**
