--- a/ESR-Technical-Documentation/Copepods.qmd
+++ b/ESR-Technical-Documentation/Copepods.qmd
@@ -1,9 +1,5 @@
 # Copepods
 
-
-
-
-
 ```{r get-file-from-google-drive}
 #| echo: false
 #| message: false
@@ -24,27 +20,21 @@ drive_download( as_id(file_id) , path = 'metadata.csv', overwrite = TRUE)
 
 df = read.csv('metadata.csv')
 
-
-
-
-df_trimmed<- df %>% select(c('Component_Section', 'Subcomponent', 'ERDDAP_Dataset_ID', 'PI', 'Contact', 'Institution', 'Source_Data', 'Additional_Calculations'))
-
+df_trimmed<- df %>% select(c('Component_Section', 'Subcomponent', 'ERDDAP_Dataset_ID', 'Contact', 'Title', 'Institution', 'Source_Data', 'Additional_Calculations'))
 
 df_trimmed<- df_trimmed %>% filter(ERDDAP_Dataset_ID=='cciea_EI_COP')
 
 ```
- **Indicator Category** `r df_trimmed$Component_Section[1]`, `r df_trimmed$Subcomponent[1]`
+ **Indicator Names** `r df_trimmed$Title[1]`, `r df_trimmed$Title[2]`, `r df_trimmed$Title[3]`
+  
+ **Indicator Component Category** `r df_trimmed$Component_Section[1]`, `r df_trimmed$Subcomponent[1]`
  
- **Indicator ERDDAP ID** 'ERDDAP_Dataset_ID'
+ **Data Steward** `r df_trimmed$Contact[1]`, `r df_trimmed$Source_Data[1]` 
  
- **Data Steward** 'PI', 'Contact' 
+ **Institution** `r df_trimmed$Institution[1]`
  
- 
- **Region** **ERDDAP_query_value** **ERDDAP_variable_name** **Source_Data** **Additional_Calculations**
+ **Additional_Calculations** `r df_trimmed$Additional_Calculations[1]`; `r df_trimmed$Additional_Calculations[2]`;`r df_trimmed$Additional_Calculations[3]`
 
-
-
-The following information should be pasted or directly written in each .qmd file
 
 **Description** Copepod biomass anomalies represent variation in northern copepods (cold-water crustacean zooplankton species rich in wax esters and fatty acids) and southern copepods (smaller species with lower fat content and nutritional quality). Northern copepods usually dominate the summer zooplankton community along the Newport Line, while southern species dominate winter. Positive northern copepod anomalies generally correlate with stronger returns of Chinook salmon to Bonneville Dam and coho salmon to coastal Oregon (@peterson2014applied). Historically, northern copepods typically have been favored by La Niña and negative PDO conditions (@keister2011zooplankton; @fisher2015impact).
 
