updates to appendix
updates and additions

--- a/ESR-Technical-Documentation/Introduction.qmd
+++ b/ESR-Technical-Documentation/Introduction.qmd
@@ -4,6 +4,17 @@ The purpose of this document is to collate the methods used to access, collect, 
 
 Indicators included in this document were selected to clearly align with management objectives, which is required for integrated ecosystem assessment (Levin et al. 2009), and has been advised many times in the literature (Degnbol and Jarre 2004; Jennings 2005; Rice and Rochet 2005; Jason S. Link 2005). A difficulty with practical implementation of this in ecosystem reporting can be the lack of clearly specified ecosystem-level management objectives (although some have been suggested (Murawski 2000)). In our case, considerable effort had already been applied to derive both general goals and operational objectives from both US legislation such as the Magnuson-Stevens Fisheries Conservation and Management Act (MSA) and regional sources (DePiper et al. 2017). These objectives are somewhat general and would need refinement together with managers and stakeholders, however, they serve as a useful starting point to structure ecosystem reporting.
 
-add the map here
+## SAMPLING LOCATIONS {#sec-jm-sampling-locations}
+
+We generally refer to areas north of Cape Mendocino as the "Northern CCE," Cape Mendocino to Point Conception as the "Central CCE", and south of Point Conception as the "Southern CCE." @fig-sampling-areas shows sampling areas for most regional oceanographic data. Key oceanographic transects are the Newport Line off Oregon, the Trinidad Head Line off northern California, and CalCOFI lines further south, while shaded marine regions indicate sampling areas for most biological surveys. This sampling is complemented by basin-scale oceanographic observations and by outputs from various models. @fig-sampling-areas also shows sampling areas for most biological indicators. The shaded terrestrial areas in @fig-sampling-areas represent freshwater ecoregions in the CCE, and are the basis by which we summarize indicators for snowpack, flows, and stream temperatures.
+
+```{r}
+#| label: fig-sampling-areas
+#| fig.cap: "Map of most sampling efforts in the California Current Ecosystem (CCE) and U.S. west coast Exclusive Economic Zone (EEZ). Symbols indicate hydrographic line sampling stations for oceanographic data. Shaded ocean regions represent biological sampling areas for the Northern California Current (NCC), which includes the Juvenile Salmon and Ocean Ecology Survey (JSOES); the Rockfish Recruitment and Ecosystem Assessment Survey (RREAS), including its Core Area; and the CalCOFI sampling region. The NCC and RREAS shaded areas, combined, also approximate the survey footprints for NOAA's coastwide CPS acoustic/trawl and groundfish bottom trawl surveys. Dashed line approximates foraging area for adult female California sea lions from the San Miguel colony. Shaded terrestrial areas represent the six freshwater ecoregions in the CCE."  
+#| width: 75%
+#| echo: false
+
+knitr::include_graphics( paste0(fig_loc,'New_sampling_area_map.png') )
+```
 
 The list below shows which versions of all related products correspond to a specific Ecosystem Status report cycle. The reports and supporting products including the technical documentation are developed annually. The DOI links will be included once they are available so may lag.
