--- a/ESR-Technical-Documentation/Introduction.qmd
+++ b/ESR-Technical-Documentation/Introduction.qmd
@@ -1,5 +1,12 @@
 # Introduction
 
+```{r}
+#| echo: false
+wd = getwd()
+fig_loc = paste0(wd,'/figures/')
+
+```
+
 The purpose of this document is to collate the methods used to access, collect, process, and analyze derived data (“indicators”) used to describe the status and trend of social, economic, ecological, and biological conditions in the California Current Large Marine Ecosystem (see figure, below). These indicators are further synthesized in Ecosystem Status Reports produced annually by the Northwest and Southwest Fisheries Science Centers for the Pacific Fisheries Management Council. The metadata for each indicator (in accordance with the Public Access to Research Results (PARR) directive) and the methods used to construct each indicator are described in the subsequent chapters, with each chapter title corresponding to an indicator or analysis present in Ecoystem Status Reports. The most recent and usable html version of this document can be found at the NOAA xxxx Github. The PDF version of this document is for archiving only. The PDF version from previous years is archived in NOAA’s Institutional Repository.
 
 Indicators included in this document were selected to clearly align with management objectives, which is required for integrated ecosystem assessment (Levin et al. 2009), and has been advised many times in the literature (Degnbol and Jarre 2004; Jennings 2005; Rice and Rochet 2005; Jason S. Link 2005). A difficulty with practical implementation of this in ecosystem reporting can be the lack of clearly specified ecosystem-level management objectives (although some have been suggested (Murawski 2000)). In our case, considerable effort had already been applied to derive both general goals and operational objectives from both US legislation such as the Magnuson-Stevens Fisheries Conservation and Management Act (MSA) and regional sources (DePiper et al. 2017). These objectives are somewhat general and would need refinement together with managers and stakeholders, however, they serve as a useful starting point to structure ecosystem reporting.
@@ -10,9 +17,9 @@ We generally refer to areas north of Cape Mendocino as the "Northern CCE," Cape 
 
 ```{r}
 #| label: fig-sampling-areas
-#| fig.cap: "Map of most sampling efforts in the California Current Ecosystem (CCE) and U.S. west coast Exclusive Economic Zone (EEZ). Symbols indicate hydrographic line sampling stations for oceanographic data. Shaded ocean regions represent biological sampling areas for the Northern California Current (NCC), which includes the Juvenile Salmon and Ocean Ecology Survey (JSOES); the Rockfish Recruitment and Ecosystem Assessment Survey (RREAS), including its Core Area; and the CalCOFI sampling region. The NCC and RREAS shaded areas, combined, also approximate the survey footprints for NOAA's coastwide CPS acoustic/trawl and groundfish bottom trawl surveys. Dashed line approximates foraging area for adult female California sea lions from the San Miguel colony. Shaded terrestrial areas represent the six freshwater ecoregions in the CCE."  
 #| width: 75%
 #| echo: false
+#| fig.cap: "Map of most sampling efforts in the California Current Ecosystem (CCE) and U.S. west coast Exclusive Economic Zone (EEZ). Symbols indicate hydrographic line sampling stations for oceanographic data. Shaded ocean regions represent biological sampling areas for the Northern California Current (NCC), which includes the Juvenile Salmon and Ocean Ecology Survey (JSOES); the Rockfish Recruitment and Ecosystem Assessment Survey (RREAS), including its Core Area; and the CalCOFI sampling region. The NCC and RREAS shaded areas, combined, also approximate the survey footprints for NOAA's coastwide CPS acoustic/trawl and groundfish bottom trawl surveys. Dashed line approximates foraging area for adult female California sea lions from the San Miguel colony. Shaded terrestrial areas represent the six freshwater ecoregions in the CCE."  
 
 knitr::include_graphics( paste0(fig_loc,'New_sampling_area_map.png') )
 ```
