Changes to the bib and references in HabititCompressionIndex.

--- a/ESR-Technical-Documentation/esr-bibliography.bib
+++ b/ESR-Technical-Documentation/esr-bibliography.bib
@@ -1387,3 +1387,76 @@ article{hall2018large,
   volume={56},
   year={2015}
 }
+
+@article{schroeder2022,
+  title = {Habitat compression indices for monitoring ocean conditions and ecosystem impacts within coastal upwelling systems},
+  volume = {144},
+  ISSN = {1470-160X},
+  url = {http://dx.doi.org/10.1016/j.ecolind.2022.109520},
+  DOI = {10.1016/j.ecolind.2022.109520},
+  journal = {Ecological Indicators},
+  publisher = {Elsevier BV},
+  author = {Schroeder,  Isaac D. and Santora,  Jarrod A. and Mantua,  Nate and Field,  John C. and Wells,  Brian K. and Hazen,  Elliott L. and Jacox,  Michael and Bograd,  Steven J.},
+  year = {2022},
+  month = nov,
+  pages = {109520}
+}
+
+@article{black2010,
+  title = {Wintertime ocean conditions synchronize rockfish growth and seabird reproduction in the central California Current ecosystem},
+  volume = {67},
+  ISSN = {1205-7533},
+  url = {http://dx.doi.org/10.1139/F10-055},
+  DOI = {10.1139/f10-055},
+  number = {7},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  publisher = {Canadian Science Publishing},
+  author = {Black,  Bryan A. and Schroeder,  Isaac D. and Sydeman,  William J. and Bograd,  Steven J. and Lawson,  Peter W.},
+  year = {2010},
+  month = jul,
+  pages = {1149–1158}
+}
+
+@article{huang2021,
+  title = {Improvements of the Daily Optimum Interpolation Sea Surface Temperature (DOISST) Version 2.1},
+  volume = {34},
+  ISSN = {1520-0442},
+  url = {http://dx.doi.org/10.1175/JCLI-D-20-0166.1},
+  DOI = {10.1175/jcli-d-20-0166.1},
+  number = {8},
+  journal = {Journal of Climate},
+  publisher = {American Meteorological Society},
+  author = {Huang,  Boyin and Liu,  Chunying and Banzon,  Viva and Freeman,  Eric and Graham,  Garrett and Hankins,  Bill and Smith,  Tom and Zhang,  Huai-Min},
+  year = {2021},
+  month = apr,
+  pages = {2923–2939}
+}
+
+@article{schroeder2009,
+  title = {Winter pre-conditioning of seabird phenology in the California Current},
+  volume = {393},
+  ISSN = {1616-1599},
+  url = {http://dx.doi.org/10.3354/meps08103},
+  DOI = {10.3354/meps08103},
+  journal = {Marine Ecology Progress Series},
+  publisher = {Inter-Research Science Center},
+  author = {Schroeder,  Isaac D. and Sydeman,  WJ and Sarkar,  N and Thompson,  SA and Bograd,  SJ and Schwing,  FB},
+  year = {2009},
+  month = oct,
+  pages = {211–223}
+}
+
+@article{schroeder2013,
+  title = {The North Pacific High and wintertime pre‐conditioning of California current productivity},
+  volume = {40},
+  ISSN = {1944-8007},
+  url = {http://dx.doi.org/10.1002/grl.50100},
+  DOI = {10.1002/grl.50100},
+  number = {3},
+  journal = {Geophysical Research Letters},
+  publisher = {American Geophysical Union (AGU)},
+  author = {Schroeder,  Isaac D. and Black,  Bryan A. and Sydeman,  William J. and Bograd,  Steven J. and Hazen,  Elliott L. and Santora,  Jarrod A. and Wells,  Brian K.},
+  year = {2013},
+  month = feb,
+  pages = {541–546}
+}
