--- a/ESR-Technical-Documentation/HabitatCompressionIndex.qmd
+++ b/ESR-Technical-Documentation/HabitatCompressionIndex.qmd
@@ -1,13 +1,44 @@
+---
+bibliography: /home/isaac/Work/IEA/2024/tech_document/tech_document.bib
+format:
+  html: 
+    code-fold: true
+
+---
+
 # Habitat Compression Index
 
-**Description** Spatial variability in patterns of upwelling, including the distribution of upwelled water and associated development of hydrographic fronts, is important for ecosystem monitoring and assessment of marine heatwaves and ecosystem shifts that can impact coastal fishing communities. Coastal upwelling creates a band of relatively cool coastal water, which is suitable habitat for a diverse and productive portion of the CCE food web. Monitoring the area and variability of upwelling habitat provides regional measures of habitat compression---an indicator to monitor the incursion of offshore warming (e.g., from heatwaves or reduced upwelling conditions) over shelf waters, which relates to shifts in the pelagic forage species community in space and time. @santora2020habitat applied principles of ecosystem oceanography and integration of fisheries surveys to develop the Habitat Compression Index (HCI) to quantify how offshore warming during the 2013--2016 marine heatwave and previous warming events restricted the cool upwelling habitat to a narrower-than-normal band along the coast. This compression of habitat consequently altered prey community composition and distribution, spatial aggregation patterns of top predators, and contributed to increased rates of whale entanglements in fixed fishing gear.
 
-HCI is derived from the CCE configuration of the Regional Ocean Modeling System (ROMS) model with data assimilation (@neveu2016historical), and is estimated in four biogeographic provinces within the CCE: 30°-35.5°N, 35.5°-40°N, 40°-43.5°N, and 43.5°-48°N. HCI is defined as the area of monthly averaged ROMS model temperatures at a depth of 2 m that fall below a temperature threshold. Each region/month has a unique temperature threshold, based on its distinct historic climatology.
+```{r}
+ds_id <- 'cciea_OC_HCI'	   
+ts_id_list = list('cciea_OC_HCI1', 'cciea_OC_HCI2', 'cciea_OC_HCI3', 'cciea_OC_HCI4')
 
-Note: perhaps we could replace highlighted text with "The Habitat Compression Index (HCI) is a model-derived measure of the area of cool habitat along the coast, which is suitable for a diverse and productive portion of the CCE food web. HCI is estimated in four biogeographic provinces within the CCE: : 30°-35.5°N, 35.5°-40°N, 40°-43.5°N, and 43.5°-48°N. Methodological details are available \[here\]."
 
-**Data sources**
+# Source some local code
+source("script_region.R")
 
-**Data extraction**
+```
+**Description** The Habitat Compression Index (HCI) is the area of cool habitat along the coast, which is suitable for a diverse and productive portion of the CCE food web. HCI is estimated in four biogeographic provinces along the shelf within the CCE.
+
+**Metafile name** `{r} fn_meta`
+ 
+**Indicator Category** `{r} vec2[['Component_Section']]`
+ 
+**Data Steward** `{r} vec2[['PI']]`
+
+**Erddap Dataset ID** `{r} ds_id`
+
+**CCIEA timeseries ID** `{r} ds_id_lbl`
+
+**Region** `{r} rgn_lbl`
+
+**References** @Santora2020, @Schroeder2022
+
+
+**Public availability statement** Source data are publicly available.
+
+**Data sources** Surface temperature data are the 2 m temperature levels of the University of California Santa Cruz 31-year historical reanalysis (<https://oceanmodeling.ucsc.edu/reanalccs31/>) and near-real-time (NRT; <https://oceanmodeling.ucsc.edu/ccsnrt/>) data-assimilative models.
+
+**Data extraction** 
 
 **Data analysis**
