Created figures/ids dir and NPH.qmd file, edited bib file.

--- a/ESR-Technical-Documentation/esr-bibliography.bib
+++ b/ESR-Technical-Documentation/esr-bibliography.bib
@@ -1460,3 +1460,34 @@ article{hall2018large,
   month = feb,
   pages = {541–546}
 }
+
+@article{Mantua1997,
+  title = {A Pacific Interdecadal Climate Oscillation with Impacts on Salmon Production},
+  volume = {78},
+  ISSN = {1520-0477},
+  url = {http://dx.doi.org/10.1175/1520-0477(1997)078<1069:APICOW>2.0.CO;2},
+  DOI = {10.1175/1520-0477(1997)078<1069:apicow>2.0.co;2},
+  number = {6},
+  journal = {Bulletin of the American Meteorological Society},
+  publisher = {American Meteorological Society},
+  author = {Mantua,  Nathan J. and Hare,  Steven R. and Zhang,  Yuan and Wallace,  John M. and Francis,  Robert C.},
+  year = {1997},
+  month = jun,
+  pages = {1069–1079}
+}
+
+
+@article{DiLorenzo2008,
+  title = {North Pacific Gyre Oscillation links ocean climate and ecosystem change},
+  volume = {35},
+  ISSN = {1944-8007},
+  url = {http://dx.doi.org/10.1029/2007GL032838},
+  DOI = {10.1029/2007gl032838},
+  number = {8},
+  journal = {Geophysical Research Letters},
+  publisher = {American Geophysical Union (AGU)},
+  author = {Di Lorenzo,  E. and Schneider,  N. and Cobb,  K. M. and Franks,  P. J. S. and Chhak,  K. and Miller,  A. J. and McWilliams,  J. C. and Bograd,  S. J. and Arango,  H. and Curchitser,  E. and Powell,  T. M. and Rivière,  P.},
+  year = {2008},
+  month = apr 
+}
+
