--- a/ESR-Technical-Documentation/BasinScaleIndicators.qmd
+++ b/ESR-Technical-Documentation/BasinScaleIndicators.qmd
@@ -39,69 +39,55 @@ rgn_lbl_npgo <- rgn_lbl
 
 ```
 
-
 # Basin-Scale Indicators
 
-**Description**  &nbsp; &nbsp;
-The CCLME is driven by atmosphere–ocean energy exchange that occurs on many temporal and spatial scales. 
-Large-scale variability is represented by three indices: the status of the equatorial El Niño–Southern Oscillation (ENSO), described by the Oceanic Niño Index (ONI, <https://origin.cpc.ncep.noaa.gov/products/analysis_monitoring/ensostuff/ONI_v5.php>); the Pacific Decadal Oscillation [PDO, @Mantua1997]; and the North Pacific Gyre Oscillation [NPGO, @DiLorenzo2008]. 
-Positive ONI and PDO values and negative NPGO values usually denote conditions that lead to low CCLME productivity, whereas negative ONI and PDO values and positive NPGO values are associated with periods of high CCE productivity. 
+**Description**     The CCLME is driven by atmosphere–ocean energy exchange that occurs on many temporal and spatial scales. Large-scale variability is represented by three indices: the status of the equatorial El Niño–Southern Oscillation (ENSO), described by the Oceanic Niño Index (ONI, <https://origin.cpc.ncep.noaa.gov/products/analysis_monitoring/ensostuff/ONI_v5.php>); the Pacific Decadal Oscillation [PDO, @Mantua1997]; and the North Pacific Gyre Oscillation [NPGO, @DiLorenzo2008]. Positive ONI and PDO values and negative NPGO values usually denote conditions that lead to low CCLME productivity, whereas negative ONI and PDO values and positive NPGO values are associated with periods of high CCE productivity.
 
+**Indicator Category**     `{r} vec2_oni[['Component_Section']]`
 
-**Indicator Category**  &nbsp; &nbsp; `{r} vec2_oni[['Component_Section']]`
- 
-**Data Steward**  &nbsp; &nbsp; `{r} vec2_oni[['PI']]` (`{r} vec2_oni[['Contact']]`)
+**Data Steward**     `{r} vec2_oni[['PI']]` (`{r} vec2_oni[['Contact']]`)
 
-**Erddap Dataset ID**   &nbsp; &nbsp; `{r} ds_id_oni`, `{r} ds_id_pdo`, `{r} ds_id_npgo`
+**Erddap Dataset ID**     `{r} ds_id_oni`, `{r} ds_id_pdo`, `{r} ds_id_npgo`
 
-**CCIEA timeseries ID**   &nbsp; &nbsp; `{r} ds_id_lbl_oni`, `{r} ds_id_lbl_pdo`, `{r} ds_id_lbl_npgo`
+**CCIEA timeseries ID**     `{r} ds_id_lbl_oni`, `{r} ds_id_lbl_pdo`, `{r} ds_id_lbl_npgo`
 
-**Region**  &nbsp; &nbsp; `{r} rgn_lbl_oni`, `{r} rgn_lbl_pdo`, `{r} rgn_lbl_npgo`
+**Region**     `{r} rgn_lbl_oni`, `{r} rgn_lbl_pdo`, `{r} rgn_lbl_npgo`
 
 **Additional Information**
 
-ENSO events impact the CCLME by modifying the jet stream and storm tracks, changing the nearshore thermocline, and influencing coastal currents that affect poleward transport and distribution of equatorial and subequatorial waters (and species). A positive ONI greater than 0.5°C indicates El Niño conditions, which usually means more storms to the south, weaker upwelling, and lower primary productivity in the CCLME. A negative ONI less than -0.5°C means La Niña conditions, which usually lead to higher productivity. 
+ENSO events impact the CCLME by modifying the jet stream and storm tracks, changing the nearshore thermocline, and influencing coastal currents that affect poleward transport and distribution of equatorial and subequatorial waters (and species). A positive ONI greater than 0.5°C indicates El Niño conditions, which usually means more storms to the south, weaker upwelling, and lower primary productivity in the CCLME. A negative ONI less than -0.5°C means La Niña conditions, which usually lead to higher productivity.
 
-The PDO is related to sea surface temperature (SST), and is derived from sea surface temperature anomalies (SSTa) in the Northeast Pacific, which often persist in “regimes” that last for many years. In positive PDO regimes, coastal SSTa along North American tend to be warmer, while those in the central North Pacific tend to be cooler. Positive PDO values are associated with lower productivity in the CCLME. 
+The PDO is related to sea surface temperature (SST), and is derived from sea surface temperature anomalies (SSTa) in the Northeast Pacific, which often persist in “regimes” that last for many years. In positive PDO regimes, coastal SSTa along North American tend to be warmer, while those in the central North Pacific tend to be cooler. Positive PDO values are associated with lower productivity in the CCLME.
 
-The NPGO is a low-frequency variation of sea surface height, indicating variations in the circulation of the North Pacific Subtropical Gyre and the Alaskan Gyre, which in turn relate to the source waters for the CCLME. Positive NPGO values are associated with increased equatorward flow, along with increased surface salinities, nutrients, and chlorophyll-a. Negative NPGO values are associated with decreases in such values, implying less subarctic source water and generally lower productivity. 
+The NPGO is a low-frequency variation of sea surface height, indicating variations in the circulation of the North Pacific Subtropical Gyre and the Alaskan Gyre, which in turn relate to the source waters for the CCLME. Positive NPGO values are associated with increased equatorward flow, along with increased surface salinities, nutrients, and chlorophyll-a. Negative NPGO values are associated with decreases in such values, implying less subarctic source water and generally lower productivity.
 
-Oceanic Niño Index information and data are from the NOAA Climate Prediction Center (<https://origin.cpc.ncep.noaa.gov/products/analysis_monitoring/ensostuff/ONI_v5.php>). 
-Pacific Decadal Oscillation data are from N. Mantua, NMFS/SWFSC, and are served on the CCIEA ERDDAP server (<https://oceanview.pfeg.noaa.gov/erddap/tabledap/cciea_OC_PDO.html>). 
-North Pacific Gyre Oscillation data are from E. Di Lorenzo, Brown University (<https://www.o3d.org/npgo/index.html>).
-
+Oceanic Niño Index information and data are from the NOAA Climate Prediction Center (<https://origin.cpc.ncep.noaa.gov/products/analysis_monitoring/ensostuff/ONI_v5.php>). Pacific Decadal Oscillation data are from N. Mantua, NMFS/SWFSC, and are served on the CCIEA ERDDAP server (<https://oceanview.pfeg.noaa.gov/erddap/tabledap/cciea_OC_PDO.html>). North Pacific Gyre Oscillation data are from E. Di Lorenzo, Brown University (<https://www.o3d.org/npgo/index.html>).
 
 **Figures**
 
 ::: {#fig-oni_pdo_npgo_M}
-![](figures/ids/oc_ONI_PDO_NPGO_Monthly.png){width=70%}
+![](figures/ids/oc_ONI_PDO_NPGO_Monthly.png){width="70%"}
 
-Monthly values of the Oceanic Niño Index (ONI), the Pacific Decadal Oscillation (PDO), and the North Pacific Gyre Oscillation (NPGO), starting 1950 and ending: October `{r} cciea_yr` (ONI), November `{r} cciea_yr` (PDO), and October `{r} cciea_yr` (NPGO). 
-
-
+Monthly values of the Oceanic Niño Index (ONI), the Pacific Decadal Oscillation (PDO), and the North Pacific Gyre Oscillation (NPGO), starting 1950 and ending: October `{r} cciea_yr` (ONI), November `{r} cciea_yr` (PDO), and October `{r} cciea_yr` (NPGO).
 :::
 
-<br>
-<br>
-<br>
+<br> <br> <br>
 
-::: {#fig-oni_pdo_npgo_S layout-ncol=3, layout="[50,-1,50,-1,50]"  }
-
+::: {#fig-oni_pdo_npgo_S layout-ncol="3," layout="[50,-1,50,-1,50]"}
 ![ONI](figures/ids/oc_ONI_Season.png){#fig-oni_S}
 
 ![PDO](figures/ids/oc_PDO_Season.png){#fig-pdo_S}
 
 ![NPGO](figures/ids/oc_NPGO_Season.png){#fig-npgo_S}
 
-Seasonal values of the Oceanic Niño Index (ONI), Pacific Decadal Oscillation (PDO), North Pacific Gyre Oscillation (NPGO) from 1950-`{r} cciea_yr`. 
-
+Seasonal values of the Oceanic Niño Index (ONI), Pacific Decadal Oscillation (PDO), North Pacific Gyre Oscillation (NPGO) from 1950-`{r} cciea_yr`.
 :::
 
 **`{r} cciea_yr` Conditions**
 
-+ @fig-oni_pdo_npgo_M and @fig-oni_pdo_npgo_S show monthly and seasonal means of the three indices.
-+ El Niño event spanned the winter and spring 2023-24 and ENSO neutral by summer 2024 (@fig-oni_pdo_npgo_M and @fig-oni_S).
-+ Short duration La Niña conditions are expected by Jan 2024 (59% chance), with a quick transition to ENSO neutral by March-May 2024 (61% chance), see <https://www.cpc.ncep.noaa.gov/products/analysis_monitoring/enso_advisory/>.
-+ PDO and NPGO both have the 5-year mean below 1 standard deviation (@fig-oni_pdo_npgo_M), with the PDO having a negative 5-year trend.
+-   @fig-oni_pdo_npgo_M and @fig-oni_pdo_npgo_S show monthly and seasonal means of the three indices.
+-   El Niño event spanned the winter and spring 2023-24 and ENSO neutral by summer 2024 (@fig-oni_pdo_npgo_M and @fig-oni_S).
+-   Short duration La Niña conditions are expected by Jan 2024 (59% chance), with a quick transition to ENSO neutral by March-May 2024 (61% chance), see <https://www.cpc.ncep.noaa.gov/products/analysis_monitoring/enso_advisory/>.
+-   PDO and NPGO both have the 5-year mean below 1 standard deviation (@fig-oni_pdo_npgo_M), with the PDO having a negative 5-year trend.
 
 **References**
